# neuratel-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  release.yml
src/neuratelai_mcp/: __init__.py  __main__.py  _client.py  server.py
src/neuratelai_mcp/tools/: __init__.py  agents.py  analytics.py  billing.py  calls.py  campaigns.py  conversations.py  dnc.py  knowledge.py  numbers.py  variables.py  webhooks.py
tests/: test_server.py
