[project]
name = "neuratelai-mcp"
version = "0.1.6"
description = "Neuratel MCP Server — connect AI assistants to Neuratel Studio"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Neuratel AI", email = "dev@neuratel.ai" }]
keywords = ["neuratel", "mcp", "voice-ai", "telephony", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=3.2.0",
  "httpx>=0.27",
]

[project.scripts]
neuratelai-mcp = "neuratelai_mcp.__main__:main"

[project.urls]
Homepage = "https://neuratel.ai"
Documentation = "https://docs.neuratel.ai"
Repository = "https://github.com/Neuratel-AI/neuratel-mcp"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
